--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
         <ul class="navbar-nav ml-auto flex-nowrap">
           <!-- About -->
           <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}">
-              about
+            <a class="nav-link" href="{{ '/' | relative_url }}" title="About page of Simone Antonelli's portfolio">
+              About
               {% if page.title == "about" %}
                 <span class="sr-only">(current)</span>
               {% endif %}
@@ -34,8 +34,8 @@
           {% if site.blog_name %}
           <!-- Blog -->
           <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}">
-              blog
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}" title="Blog page of Simone Antonelli's portfolio">
+              Blog
               {% if page.title == "blog" %}
               <span class="sr-only">(current)</span>
               {% endif %}
@@ -76,6 +76,10 @@
           {% endif %}
           {% endif %}
           {% endfor %}
+          <!-- CV link -->
+          <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
+            <a class="nav-link" target="_blank" href="{{ '/assets/pdf/simone_antonelli_resume.pdf' | prepend: site.baseurl | prepend: site.url }}" title="Simone Antonelli's curriculum vitae">CV</a>
+          </li>
           {% if site.enable_darkmode %}
             <div class = "toggle-container">
               <a id = "light-toggle">
