--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,7 @@ $yellow-color:        #efcc00 !default;
 
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
-$grey-color-dark:     #1C1C1D;
+$grey-color-dark:     darken($grey-color, 25%);
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
@@ -33,5 +33,6 @@ $black-color: #000000 !default;
 
 // Theme colors
 
-$code-bg-color-light:     rgba($purple-color, 0.05);
+$code-bg-color-light:     rgba($cyan-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
+
