--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,18 +34,20 @@
           {% endfor %}
 
           <!-- About -->
-          <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
-              {%- if page.permalink == '/' -%}
+          <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
+            <a class="nav-link" href="{{ '/' | relative_url }}" title="About page of Simone Antonelli's portfolio">
+              About
+              {% if page.title == "about" %}
               <span class="sr-only">(current)</span>
-              {%- endif -%}
+              {% endif %}
             </a>
           </li>
           {% if site.blog_nav_title %}
           <!-- Blog -->
           <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
-              {%- if page.url contains 'blog' -%}
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}" title="Blog page of Simone Antonelli's portfolio">
+              Blog
+              {% if page.title == "blog" %}
               <span class="sr-only">(current)</span>
               {%- endif -%}
             </a>
@@ -82,19 +84,23 @@
               {%- endif -%}
             </a>
           </li>
-          {%- endif -%}
-          {%- endif -%}
-          {% endfor -%}
-          {%- if site.enable_darkmode %}
-
-          <!-- Toogle theme mode -->
-          <li class="toggle-container">
-            <button id="light-toggle" title="Change theme">
+          {% endif %}
+          {% endif %}
+          {% endfor %}
+          <!-- CV link -->
+          <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
+            <a class="nav-link" target="_blank"
+              href="{{ '/assets/pdf/simone_antonelli_resume.pdf' | prepend: site.baseurl | prepend: site.url }}"
+              title="Simone Antonelli's curriculum vitae">CV</a>
+          </li>
+          {% if site.enable_darkmode %}
+          <div class="toggle-container">
+            <a id="light-toggle">
               <i class="fas fa-moon"></i>
               <i class="fas fa-sun"></i>
-            </button>
-          </li>
-          {%- endif %}
+            </a>
+          </div>
+          {% endif %}
         </ul>
       </div>
     </div>
