--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,20 +18,8 @@ strong {
   color: var(--global-text-color);
 }
 
-hr {
-  border-top: 1px solid var(--global-divider-color);
-}
-
-table {
-
-  td,
-  th {
-    color: var(--global-text-color);
-  }
-
-  td {
-    font-size: 1rem;
-  }
+article div {
+  margin-bottom: 1rem;
 }
 
 a,
@@ -48,17 +36,36 @@ table.table a {
   }
 }
 
-figure,
-img {
-  max-width: 90vw;
-}
+table {
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+  text-align: left;
+  vertical-align: top;
 
-blockquote {
-  background: var(--global-bg-color);
-  border-left: 2px solid var(--global-theme-color);
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  font-size: 1.2rem;
+  td {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+  }
+
+  th {
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+  }
 }
 
 // Math
@@ -401,13 +408,6 @@ footer.sticky-bottom {
       margin-bottom: 0;
     }
 
-    .post-tags {
-      color: var(--global-text-color-light);
-      font-size: 0.875rem;
-      padding-top: 0.25rem;
-      padding-bottom: 0;
-    }
-
     a {
       color: var(--global-text-color);
       text-decoration: none;
@@ -467,6 +467,11 @@ footer.sticky-bottom {
   .card {
     img {
       width: 100%;
+    }
+
+    .card-title {
+      font-size: x-large;
+      color: $black-color;
     }
   }
 
@@ -698,26 +703,44 @@ figure {
     text-align: center;
   }
 
-  .post-tags {
-    color: var(--global-text-color-light);
-    font-size: 0.875rem;
-    padding-top: 0.25rem;
-    padding-bottom: 1rem;
+  figcaption {
+    text-align: center;
+  }
+}
 
-    a {
-      color: var(--global-text-color-light);
-      text-decoration: none;
+// Share bar
+/* Share buttons */
+.sharebuttons {
+  padding-bottom: 0;
+  padding-top: 0;
 
-      &:hover {
+  a {
+    i::before {
+      color: var(--global-text-color);
+      -webkit-transition: all 0.2s ease-in-out;
+    }
+
+    &:hover {
+      i::before {
         color: var(--global-theme-color);
       }
     }
   }
+}
 
-  .post-content {
-    blockquote {
-      border-left: 5px solid var(--global-theme-color);
-      padding: 8px;
-    }
-  }
+.sharebuttons i {
+  font-size: 1.7rem;
+}
+
+.sharebuttons ul {
+  margin: 20px 0 0 0;
+  text-align: center;
+}
+
+.sharebuttons ul li {
+  display: inline;
+}
+
+.sharebuttons ul li a {
+  text-decoration: none;
 }
