Add resume page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -87,12 +87,10 @@
           {% endif %}
           {% endif %}
           {% endfor %}
-          <!-- CV link -->
+          <!-- CV link 
           <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
-            <a class="nav-link" target="_blank"
-              href="{{ '/assets/pdf/simone_antonelli_resume.pdf' | prepend: site.baseurl | prepend: site.url }}"
-              title="Simone Antonelli's curriculum vitae">CV</a>
-          </li>
+            <a class="nav-link" target="_blank" href="{{ '/assets/pdf/simone_antonelli_resume.pdf' | prepend: site.baseurl | prepend: site.url }}" title="Simone Antonelli's curriculum vitae">CV</a>
+          </li> -->
           {% if site.enable_darkmode %}
           <div class="toggle-container">
             <a id="light-toggle">
