--- a/_sass/_image.scss
+++ b/_sass/_image.scss
@@ -1,48 +1,67 @@
-img[alt="Feature Visualization"] { 
+img[alt="Feature Visualization"] {
     width: 50%;
 }
-img[alt="Feature Attribution"] { 
+
+img[alt="Feature Attribution"] {
     width: 50%;
 }
-img[alt="Airplane"] { 
+
+img[alt="Airplane"] {
     width: 35%;
 }
-img[alt="Gen-Airplane"] { 
+
+img[alt="Gen-Airplane"] {
     width: 35%;
 }
-img[alt="Car"] { 
+
+img[alt="Car"] {
     width: 35%;
 }
-img[alt="Gen-Car"] { 
+
+img[alt="Gen-Car"] {
     width: 35%;
 }
-img[alt="Lamp"] { 
+
+img[alt="Lamp"] {
     width: 35%;
 }
-img[alt="Gen-Lamp"] { 
+
+img[alt="Gen-Lamp"] {
     width: 35%;
 }
-img[alt="Bowl"] { 
+
+img[alt="Bowl"] {
     width: 35%;
 }
-img[alt="Gen-Bowl"] { 
+
+img[alt="Gen-Bowl"] {
     width: 35%;
 }
-img[alt="Opt-Lamp"] { 
+
+img[alt="Opt-Lamp"] {
     width: 32%;
 }
-img[alt="Opt-Vase"] { 
+
+img[alt="Opt-Vase"] {
     width: 32%;
 }
-img[alt="Opt-Stool"] { 
+
+img[alt="Opt-Stool"] {
     width: 32%;
 }
-img[alt="Opt-Airplane"] { 
+
+img[alt="Opt-Airplane"] {
     width: 50%;
 }
-img[alt="Open In Colab"] { 
-    width: 15%;
+
+img {
+    width: 90%;
 }
-img[alt="Open GitHub repo"] { 
-    width: 9%;
+
+img[alt="Open In Colab"] {
+    width: 8%;
+}
+
+img[alt="Open GitHub repo"] {
+    width: 8%;
 }
