--- a/_sass/_image.scss
+++ b/_sass/_image.scss
@@ -40,12 +40,12 @@ img[alt="Opt-Stool"] {
 img[alt="Opt-Airplane"] { 
     width: 50%;
 }
-img { 
-    width: 90%;
-}
+// img { 
+//     width: 90%;
+// }
 img[alt="Open In Colab"] { 
-    width: 8%;
+    width: 15%;
 }
 img[alt="Open GitHub repo"] { 
-    width: 8%;
+    width: 9%;
 }
