--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -38,29 +38,53 @@
 
       {% if forloop.length == 1 %}
       {% if author_is_self %}
-      <em>{{author.last}}, {{author.first}}</em>
+      <em>{{author.first}} {{author.last}}</em>
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %}
       {% else %}
-      {{author.last}}, {{author.first}}
+      {{author.first}} {{author.last}}
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %}
       {% endif %}
       {% else %}
       {% unless forloop.last %}
       {% if author_is_self %}
-      <em>{{author.last}}, {{author.first}}</em>,
+      <em>{{author.first}} {{author.last}}</em>
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %},
       {% else %}
       {% if coauthor_url %}
-      <a target="_blank" href="{{coauthor_url}}">{{author.last}}, {{author.first}}</a>,
+      <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %},
       {% else %}
-      {{author.last}}, {{author.first}},
+      {{author.first}} {{author.last}}
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %},
       {% endif %}
       {% endif %}
       {% else %}
       {% if author_is_self %}
-      and <em>{{author.last}}, {{author.first}}</em>
+      and <em>{{author.first}} {{author.last}}</em>
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %}
       {% else %}
       {% if coauthor_url %}
-      and <a target="_blank" href="{{coauthor_url}}">{{author.last}}, {{author.first}}</a>
+      and <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %}
       {% else %}
-      and {{author.last}}, {{author.first}}
+      and {{author.first}} {{author.last}}
+      {% if entry.contribution contains author.last %}
+      <b>*</b>
+      {% endif %}
       {% endif %}
       {% endif %}
       {% endunless %}
