--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -121,6 +121,8 @@
       <em>{{entry.journal}}</em>
       {% elsif entry.type == "inproceedings" %}
       <em>In {{entry.booktitle}}</em>
+      {% elsif entry.type == "misc" %}
+      <em>{{entry.publisher}}</em>
       {% endif %}
       {% if entry.month %}
       {{entry.month | capitalize}}
