--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -111,6 +111,7 @@
 
   {% include scripts/bootstrap.html %}
   {% include scripts/analytics.html %}
+  {% include scripts/progressBar.html %}
 </body>
 
 </html>
