--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,43 +1,5 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<title>
-  {% if site.title == "blank" %}
-  {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}
-  {% else %}
-  {{ site.title }}
-  {% endif %}
-  {% if page.title != "blank" and page.url != "/" %}
-  | {{ page.title }}
-  {% endif %}
-</title>
-<meta name="description" content="{{ site.description }}">
-
-<!-- Open Graph -->
-{% if site.serve_og_meta %}
-<meta property="og:site_name" content="{{ site.first_name }} {{ site.last_name }}" />
-<meta property="og:type" content="object" />
-<meta property="og:title" content="{{ site.first_name }} {{ site.last_name }} - Portfolio" />
-<meta property="og:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}" />
-<meta property="og:description" content="{{ site.description}}" />
-<meta property="og:image" content="{{ site.og_image | prepend: site.baseurl | prepend: site.url }}" />
-{% endif %}
-
-<!-- Twitter cards -->
-<meta name="twitter:site" content="@{{ site.twitter_username }}">
-<meta name="twitter:creator" content="@{{ site.twitter_username }}">
-<meta name="twitter:title" content="{{ site.first_name }} {{ site.last_name }} - Portfolio">
-
-<meta name="twitter:description" content="{{ site.description }}">
-
-{% if page.image %}
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="{{ site.og_image | prepend: site.baseurl | prepend: site.url }}">
-{% else %}
-<meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="{{ site.og_image | prepend: site.baseurl | prepend: site.url }}">
-{% endif %}
+<!-- Metadata, OpenGraph and Schema.org -->
+{% include metadata.html %}
 
 <!-- Bootstrap & MDB -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@{{ site.bootstrap.version }}/dist/css/bootstrap.min.css"
@@ -58,27 +20,23 @@
 <!-- Code Syntax Highlighting -->
 <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_light | append: '.css' }}"
-  media="none" id="highlight_theme_light" />
+  media="" id="highlight_theme_light" />
 
 <!-- Styles -->
-{% if site.icon != empty %}
-<link rel="icon"
+{% if site.icon.size < 3 %} <link rel="shortcut icon"
   href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ site.icon }}</text></svg>">
-{% endif %}
-<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-<link rel="canonical"
-  href="{{ page.url | replace:'index.html','' | relative_url | prepend: site.baseurl | prepend: site.url}}">
+  {% elsif site.icon != blank %}
+  <link rel="shortcut icon" href="{{ site.icon | prepend: '/assets/img/' | relative_url}}" />
+  {% endif %}
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/svg+xml" href="{{ site.icon | prepend: site.baseurl | prepend: site.url }}">
-<link rel="apple-touch-icon" type="image/svg+xml"
-  href="{{ '/assets/img/apple-touch-icon.svg' | prepend: site.baseurl | prepend: site.url }}">
+  <!-- Dark Mode -->
+  {% if site.enable_darkmode %}
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/{{ site.highlight_theme_dark | append: '.css' }}"
+    media="none" id="highlight_theme_dark" />
 
-{% if site.enable_darkmode %}
-<!-- Dark Mode -->
-<script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
-<script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
-{% endif %}
-
-<!-- Google site verification -->
-<meta name="google-site-verification" content="hDA3AMf31FYDR4O0cr5UGJ7SXCLOmoDXKnQUt4x-X_g" />
+  <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/dark_mode.js' | relative_url }}"></script>
+  {% endif %}
