--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,20 @@
     class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
     <div class="container">
       {% if page.permalink != '/' -%}
-      <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/">
-        {%- if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name
-        }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif -%}
+      <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
+        {%- if site.title == "blank" -%}
+        {%- if site.first_name -%}
+        <span class="font-weight-bold">{{- site.first_name -}}&nbsp;</span>
+        {%- endif -%}
+        {%- if site.middle_name -%}
+        {{- site.middle_name -}}&nbsp;
+        {%- endif -%}
+        {%- if site.last_name -%}
+        {{- site.last_name -}}
+        {%- endif -%}
+        {%- else -%}
+        {{- site.title -}}
+        {%- endif -%}
       </a>
       {%- elsif site.enable_navbar_social -%}
       <!-- Social Icons -->
@@ -34,20 +45,18 @@
           {% endfor %}
 
           <!-- About -->
-          <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}" title="About page of Simone Antonelli's portfolio">
-              About
-              {% if page.title == "about" %}
+          <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
+            <a class="nav-link" href="{{ '/' | relative_url }}">{{ about_title }}
+              {%- if page.permalink == '/' -%}
               <span class="sr-only">(current)</span>
-              {% endif %}
+              {%- endif -%}
             </a>
           </li>
           {% if site.blog_nav_title %}
           <!-- Blog -->
           <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/blog/' | relative_url }}" title="Blog page of Simone Antonelli's portfolio">
-              Blog
-              {% if page.title == "blog" %}
+            <a class="nav-link" href="{{ '/blog/' | relative_url }}">{{ site.blog_nav_title }}
+              {%- if page.url contains 'blog' -%}
               <span class="sr-only">(current)</span>
               {%- endif -%}
             </a>
@@ -84,23 +93,29 @@
               {%- endif -%}
             </a>
           </li>
-          {% endif %}
-          {% endif %}
-          {% endfor %}
-          <!-- CV link 
-          <li class="nav-item {% if page.title == 'CV' %}active{% endif %}">
-            <a class="nav-link" target="_blank" href="{{ '/assets/pdf/simone_antonelli_resume.pdf' | prepend: site.baseurl | prepend: site.url }}" title="Simone Antonelli's curriculum vitae">CV</a>
-          </li> -->
-          {% if site.enable_darkmode %}
-          <div class="toggle-container">
-            <a id="light-toggle">
+          {%- endif -%}
+          {%- endif -%}
+          {% endfor -%}
+          {%- if site.enable_darkmode %}
+
+          <!-- Toogle theme mode -->
+          <li class="toggle-container">
+            <button id="light-toggle" title="Change theme">
               <i class="fas fa-moon"></i>
               <i class="fas fa-sun"></i>
-            </a>
-          </div>
-          {% endif %}
+            </button>
+          </li>
+          {%- endif %}
         </ul>
       </div>
     </div>
   </nav>
+  {% if site.enable_progressbar %}
+  <!-- Scrolling Progress Bar -->
+  <progress id="progress" value="0">
+    <div class="progress-container">
+      <span class="progress-bar"></span>
+    </div>
+  </progress>
+  {%- endif %}
 </header>
