--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,128 +2,114 @@
 ---
 <!-- _layouts/bib.html -->
 <div class="row">
-  <div class="col-sm-2 abbr">
-    {% if entry.abbr %}
-    {% if site.data.venues[entry.abbr] %}
-    <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
+  <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+    {%- if entry.preview -%}
+    {% if entry.preview contains '://' -%}
+    <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+    {%- else -%}
+    <img class="preview z-depth-1 rounded"
+      src="{{ entry.preview | prepend: '/assets/img/publication_preview/' | relative_url }}">
+    {%- endif -%}
+    {%- elsif entry.abbr -%}
+    {%- if site.data.venues[entry.abbr] -%}
+    {%- assign venue_style = nil -%}
+    {%- if site.data.venues[entry.abbr].color != blank -%}
+    {%- assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' -%}
+    {%- endif -%}
+    <abbr class="badge" {% if venue_style %}{{venue_style}}{% endif %}><a
+        href="{{site.data.venues[entry.abbr].url}}">{{entry.abbr}}</a></abbr>
     {%- else -%}
     <abbr class="badge">{{entry.abbr}}</abbr>
-    {% endif %}
-    {% endif %}
+    {%- endif -%}
+    {%- endif -%}
   </div>
 
   <!-- Entry bib key -->
   <div id="{{entry.key}}" class="col-sm-8">
-    {% if entry.type == "thesis" %}
+    {% if entry.type == "thesis" -%}
     {{reference}}
-    {% else %}
-    <div class="title"><a target="_blank" href="{{entry.url}}">{{entry.title}}</a></div>
+    {%- else %}
+    <!-- Title -->
+    <div class="title">{{entry.title}}</div>
+    <!-- Author -->
     <div class="author">
-      {% for author in entry.author_array %}
-      {% assign author_is_self = false %}
-      {% if author.last == site.scholar.last_name%}
-      {% if site.scholar.first_name contains author.first%}
-      {% assign author_is_self = true %}
-      {% endif %}
-      {% endif %}
-      {% assign coauthor_url = nil %}
-      {% if site.data.coauthors[author.last] %}
-      {% for coauthor in site.data.coauthors[author.last] %}
-      {% if coauthor.firstname contains author.first %}
-      {% assign coauthor_url = coauthor.url %}
-      {% break %}
-      {% endif %}
-      {% endfor %}
+      {% assign author_array_size = entry.author_array | size %}
+
+      {% assign author_array_limit = author_array_size %}
+      {%- if site.max_author_limit and author_array_size > site.max_author_limit %}
+      {% assign author_array_limit = site.max_author_limit %}
       {% endif %}
 
-      {% if forloop.length == 1 %}
-      {% if author_is_self %}
+      {%- for author in entry.author_array limit: author_array_limit -%}
+      {%- assign author_is_self = false -%}
+      {%- assign author_last_name = author.last | remove: "¶" | remove: "&" | remove: "*" | remove: "†" | remove: "^"
+      -%}
+      {%- if site.scholar.last_name contains author_last_name -%}
+      {%- if site.scholar.first_name contains author.first -%}
+      {%- assign author_is_self = true -%}
+      {%- endif -%}
+      {%- endif -%}
+      {%- assign coauthor_url = nil -%}
+      {%- if site.data.coauthors[author_last_name] -%}
+      {%- for coauthor in site.data.coauthors[author_last_name] -%}
+      {%- if coauthor.firstname contains author.first -%}
+      {%- assign coauthor_url = coauthor.url -%}
+      {%- break -%}
+      {%- endif -%}
+      {%- endfor -%}
+      {%- endif -%}
+
+      {%- if forloop.length > 1 -%}
+      {%- if forloop.first == false -%},&nbsp;{%- endif -%}
+      {%- if forloop.last and author_array_limit == author_array_size -%}and&nbsp;{%- endif -%}
+      {%- endif -%}
+      {%- if author_is_self -%}
       <em>{{author.first}} {{author.last}}</em>
-      {% else %}
+      {%- else -%}
+      {%- if coauthor_url -%}
+      <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
+      {%- else -%}
       {{author.first}} {{author.last}}
-      {% endif %}
-      {% else %}
-      {% assign second_last = forloop.length | minus: 2 %}
-      {% unless forloop.last %}
-      {% if author_is_self %}
-      {% if entry.contribution contains author.last %}
-      {% if forloop.index0 == second_last %}
-      <em>{{author.first}} {{author.last}}</em><b>*</b>
-      {% else %}
-      <em>{{author.first}} {{author.last}}</em><b>*</b>,
-      {% endif %}
-      {% else %}
-      {% if forloop.index0 == second_last %}
-      <em>{{author.first}} {{author.last}}</em>
-      {% else %}
-      <em>{{author.first}} {{author.last}}</em>,
-      {% endif %}
-      {% endif %}
-      {% else %}
-      {% if coauthor_url %}
-      {% if entry.contribution contains author.last %}
-      {% if forloop.index0 == second_last %}
-      <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a><b>*</b>
-      {% else %}
-      <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a><b>*</b>,
-      {% endif %}
-      {% else %}
-      {% if forloop.index0 == second_last %}
-      <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
-      {% else %}
-      <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>,
-      {% endif %}
-      {% endif %}
-      {% else %}
-      {% if entry.contribution contains author.last %}
-      {% if forloop.index0 == second_last %}
-      {{author.first}} {{author.last}}<b>*</b>
-      {% else %}
-      {{author.first}} {{author.last}}<b>*</b>,
-      {% endif %}
-      {% else %}
-      {% if forloop.index0 == second_last %}
-      {{author.first}} {{author.last}}
-      {% else %}
-      {{author.first}} {{author.last}},
-      {% endif %}
-      {% endif %}
-      {% endif %}
-      {% endif %}
-      {% else %}
-      {% if author_is_self %}
-      {% if entry.contribution contains author.last %}
-      and <em>{{author.first}} {{author.last}}</em><b>*</b>
-      {% else %}
-      and <em>{{author.first}} {{author.last}}</em>
-      {% endif %}
-      {% else %}
-      {% if coauthor_url %}
-      {% if entry.contribution contains author.last %}
-      and <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a><b>*</b>
-      {% else %}
-      and <a target="_blank" href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
-      {% endif %}
-      {% else %}
-      {% if entry.contribution contains author.last %}
-      and {{author.first}} {{author.last}}<b>*</b>
-      {% else %}
-      and {{author.first}} {{author.last}}
-      {% endif %}
-      {% endif %}
-      {% endif %}
-      {% endunless %}
-      {% endif %}
-      {% endfor %}
+      {%- endif -%}
+      {%- endif -%}
+      {%- endfor -%}
+      {%- assign more_authors = author_array_size | minus: author_array_limit -%}
+
+      {%- assign more_authors_hide = more_authors | append: " more author" -%}
+      {%- if more_authors > 0 -%}
+      {%- if more_authors > 1 -%}
+      {%- assign more_authors_hide = more_authors_hide | append: "s" -%}
+      {%- endif -%}
+      {%- assign more_authors_show = '' -%}
+      {%- for author in entry.author_array offset: author_array_limit -%}
+      {%- assign more_authors_show = more_authors_show | append: author.first | append: " " | append: author.last -%}
+      {%- unless forloop.last -%}
+      {%- assign more_authors_show = more_authors_show | append: ", " -%}
+      {%- endunless -%}
+      {%- endfor -%}
+      , and
+      <span class="more-authors" title="click to view {{more_authors_hide}}" onclick="
+                  var element = $(this);
+                  element.attr('title', '');
+                  var more_authors_text = element.text() == '{{more_authors_hide}}' ? '{{more_authors_show}}' : '{{more_authors_hide}}';
+                  var cursorPosition = 0;
+                  var textAdder = setInterval(function(){
+                    element.text(more_authors_text.substring(0, cursorPosition + 1));
+                    if (++cursorPosition == more_authors_text.length){
+                      clearInterval(textAdder);
+                    }
+                }, '{{site.more_authors_animation_delay}}');
+                ">{{more_authors_hide}}</span>
+      {%- endif -%}
+
     </div>
 
     <!-- Journal/Book title and date -->
+    {% assign proceedings = "inproceedings, incollection" | split: ','%}
     {% if entry.type == "article" -%}
     {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
-    {%- elsif entry.type == "inproceedings" -%}
+    {%- elsif proceedings contains entry.type -%}
     {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
-    {%- elsif entry.type == "misc" -%}
-    {%- capture entrytype -%}<em>In {{entry.publisher}}</em> {%- endcapture -%}
     {%- else -%}
     {%- capture entrytype -%}{%- endcapture -%}
     {%- endif -%}
@@ -135,78 +121,70 @@
     {%- endif -%}
     {%- capture periodical -%}{{ entrytype }}{{ entrymonth }}{{ entryyear }}{%- endcapture -%}
     <div class="periodical">
-      {% if entry.type == "article" %}
-      <em>{{entry.journal}}</em>
-      {% elsif entry.type == "inproceedings" %}
-      <em>In {{entry.booktitle}}</em>
-      {% elsif entry.type == "misc" %}
-      <em>{{entry.publisher}}</em>
-      {% endif %}
-      {% if entry.month %}
-      {{entry.month | capitalize}}
-      {% endif %}
-      {% if entry.year %}
-      {{entry.year}}
-      {% endif %}
+      {{ periodical | strip }}
     </div>
-    {% endif %}
+    {%- endif %}
 
     <!-- Links/Buttons -->
     <div class="links">
-      {% if entry.abstract %}
+      {%- if entry.abstract %}
       <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
-      {% endif %}
-      {% if entry.arxiv %}
-      <a target="_blank" href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0"
-        role="button">arXiv</a>
-      {% endif %}
-      {% if entry.bibtex_show %}
+      {%- endif %}
+      {%- if entry.arxiv %}
+      <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
+      {%- endif %}
+      {%- if entry.bibtex_show %}
       <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-      {% endif %}
-      {% if entry.html %}
-      <a target="_blank" href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
-      {% endif %}
-      {% if entry.pdf %}
-      {% if entry.pdf contains '://' %}
-      <a target="_blank" href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-      {% else %}
-      <a target="_blank" href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
+      {%- endif %}
+      {%- if entry.html %}
+      <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+      {%- endif %}
+      {%- if entry.pdf %}
+      {% if entry.pdf contains '://' -%}
+      <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+      {%- else -%}
+      <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
         role="button">PDF</a>
-      {% endif %}
-      {% endif %}
-      {% if entry.supp %}
-      {% if entry.supp contains '://' %}
-      <a target="_blank" href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-      {% else %}
-      <a target="_blank" href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
+      {%- endif %}
+      {%- endif %}
+      {%- if entry.supp %}
+      {% if entry.supp contains '://' -%}
+      <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
+      {%- else -%}
+      <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
         role="button">Supp</a>
-      {% endif %}
-      {% endif %}
-      {% if entry.blog %}
-      <a target="_blank" href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
-      {% endif %}
-      {% if entry.code %}
-      <a target="_blank" href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
-      {% endif %}
-      {% if entry.poster %}
-      {% if entry.poster contains '://' %}
-      <a target="_blank" href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-      {% else %}
-      <a target="_blank" href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
+      {%- endif %}
+      {%- endif %}
+      {%- if entry.blog %}
+      <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
+      {%- endif %}
+      {%- if entry.code %}
+      <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
+      {%- endif %}
+      {%- if entry.poster %}
+      {% if entry.poster contains '://' -%}
+      <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
+      {%- else -%}
+      <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
         role="button">Poster</a>
-      {% endif %}
-      {% endif %}
-      {% if entry.slides %}
-      {% if entry.slides contains '://' %}
-      <a target="_blank" href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
-      {% else %}
-      <a target="_blank" href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
+      {%- endif %}
+      {%- endif %}
+      {%- if entry.slides %}
+      {% if entry.slides contains '://' -%}
+      <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
+      {%- else -%}
+      <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0"
         role="button">Slides</a>
-      {% endif %}
-      {% endif %}
-      {% if entry.website %}
-      <a target="_blank" href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
-      {% endif %}
+      {%- endif %}
+      {%- endif %}
+      {%- if entry.website %}
+      <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
+      {%- endif %}
+      {%- if entry.altmetric %}
+      <script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
+      <div data-altmetric-id="{{ entry.altmetric }}" class="altmetric-embed" data-hide-no-mentions="true"
+        data-hide-less-than="15" data-badge-popover="right" data-badge-type="2" style="display:inline"></div>
+      {%- endif %}
     </div>
 
     {% if entry.abstract -%}
@@ -219,7 +197,7 @@
     {% if entry.bibtex_show -%}
     <!-- Hidden bibtex block -->
     <div class="bibtex hidden">
-      {% highlight bibtex %}{{ entry.bib }}{% endhighlight %}
+      {% highlight bibtex %}{{ entry.bibtex | hideCustomBibtex }}{% endhighlight %}
     </div>
     {%- endif %}
   </div>
