--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.name_page }} {% if page.cv_pdf %}<a
+    <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a
         href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer"
         class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
     <p class="post-description">{{ page.description }}</p>
