--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,16 +6,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}
-      {% if page.notebook %}
-      <br><a href={{ page.notebook }} target="_blank"><img
-          src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab" /></a>
-      {% endif %}
-      {% if page.source %}
-      <br><a href={{ page.source }} target="_blank"><img src="https://badgen.net/badge/icon/github?icon=github&label"
-          alt="Open GitHub repo" /></a>
-      {% endif %}
-    </p>
+    <p class="post-description">{{ page.description }}</p>
   </header>
 
   <article>
