--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,21 +4,6 @@
 
 // Typography
 
-.cv h3 {
-  color: var(--global-theme-color);
-}
-
-.cv .badge {
-  background: var(--global-theme-color);
-}
-
-.cv td {
-  margin-left: 1.5em;
-  overflow: hidden;
-  display: inline-block;
-  white-space: nowrap;
-}
-
 p,
 h1,
 h2,
@@ -28,13 +13,26 @@ h5,
 h6,
 em,
 div,
+li,
 span,
 strong {
   color: var(--global-text-color);
 }
 
-article div {
-  margin-bottom: 1rem;
+hr {
+  border-top: 1px solid var(--global-divider-color);
+}
+
+table {
+
+  td,
+  th {
+    color: var(--global-text-color);
+  }
+
+  td {
+    font-size: 1rem;
+  }
 }
 
 a,
@@ -46,41 +44,22 @@ table.table a {
     text-decoration: underline;
   }
 
-  &:hover:after {
+  &:hover:after :not(.nav-item.dropdown) {
     width: 100%;
   }
 }
 
-table {
-  margin-left: auto;
-  margin-right: auto;
-  border-collapse: collapse;
-  border-spacing: 0;
-  text-align: left;
-  vertical-align: top;
+figure,
+img {
+  max-width: 90vw;
+}
 
-  td {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-  }
-
-  th {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-  }
+blockquote {
+  background: var(--global-bg-color);
+  border-left: 2px solid var(--global-theme-color);
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  font-size: 1.2rem;
 }
 
 // Math
@@ -133,14 +112,12 @@ table {
 // Profile
 
 .profile {
-  margin-left: 1rem;
   width: 100%;
 
   .address {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
-    font-size: 1rem;
 
     p {
       display: inline-block;
@@ -149,8 +126,12 @@ table {
   }
 }
 
-img {
-  aspect-ratio: attr(width) / attr(height);
+.profile.float-right {
+  margin-left: 1rem;
+}
+
+.profile.float-left {
+  margin-right: 1rem;
 }
 
 @media (min-width: 576px) {
@@ -184,9 +165,35 @@ img {
 
 .navbar {
   box-shadow: none;
-  border-bottom: 1px solid $grey-color-light;
+  border-bottom: 1px solid var(--global-divider-color);
   background-color: var(--global-bg-color);
   opacity: 0.95;
+}
+
+.navbar .dropdown-menu {
+  background-color: var(--global-bg-color);
+  border: 1px solid var(--global-divider-color);
+
+  a:not(.active) {
+    color: var(--global-text-color);
+  }
+
+  a:hover {
+    color: var(--global-hover-color);
+  }
+
+  .dropdown-divider {
+    border-top: 1px solid var(--global-divider-color) !important;
+  }
+}
+
+.dropdown-item {
+  color: var(--global-text-color);
+
+  &:hover {
+    color: var(--global-hover-color);
+    background-color: var(--global-bg-color);
+  }
 }
 
 .navbar.navbar-light {
@@ -339,7 +346,7 @@ footer.fixed-bottom {
 }
 
 footer.sticky-bottom {
-  border-top: 1px solid $grey-color-light;
+  border-top: 1px solid var(--global-divider-color);
   padding-top: 40px;
   padding-bottom: 40px;
   font-size: 0.9rem;
@@ -356,6 +363,7 @@ footer.sticky-bottom {
 
     .list-group-item {
       background-color: inherit;
+      border-color: var(--global-divider-color);
 
       .badge {
         color: var(--global-card-bg-color) !important;
@@ -376,7 +384,7 @@ footer.sticky-bottom {
 // Blog
 
 .header-bar {
-  border-bottom: 1px solid $grey-color-light;
+  border-bottom: 1px solid var(--global-divider-color);
   text-align: center;
   padding-top: 2rem;
   padding-bottom: 3rem;
@@ -412,7 +420,7 @@ footer.sticky-bottom {
   padding: 0;
 
   li {
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 1px solid var(--global-divider-color);
     list-style: none;
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -421,6 +429,13 @@ footer.sticky-bottom {
       color: var(--global-text-color-light);
       font-size: 0.875rem;
       margin-bottom: 0;
+    }
+
+    .post-tags {
+      color: var(--global-text-color-light);
+      font-size: 0.875rem;
+      padding-top: 0.25rem;
+      padding-bottom: 0;
     }
 
     a {
@@ -483,11 +498,6 @@ footer.sticky-bottom {
     img {
       width: 100%;
     }
-
-    .card-title {
-      font-size: x-large;
-      color: $black-color;
-    }
   }
 
   .card-item {
@@ -507,8 +517,8 @@ footer.sticky-bottom {
   }
 
   h2.category {
-    color: $grey-color-light;
-    border-bottom: 1px solid $grey-color-light;
+    color: var(--global-divider-color);
+    border-bottom: 1px solid var(--global-divider-color);
     padding-top: 0.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -539,8 +549,8 @@ footer.sticky-bottom {
   }
 
   h2.year {
-    color: $grey-color-light;
-    border-top: 1px solid $grey-color-light;
+    color: var(--global-divider-color);
+    border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
     margin-bottom: -2rem;
@@ -712,50 +722,89 @@ html.transition *:after {
   transition-delay: 0 !important;
 }
 
-// Figure with caption
-figure {
-  p {
-    text-align: center;
+// Extra Markdown style (post Customization)
+.post {
+  .post-meta {
+    color: var(--global-text-color-light);
+    font-size: 0.875rem;
+    margin-bottom: 0;
   }
 
-  figcaption {
-    text-align: center;
-  }
-}
+  .post-tags {
+    color: var(--global-text-color-light);
+    font-size: 0.875rem;
+    padding-top: 0.25rem;
+    padding-bottom: 1rem;
 
-// Share bar
-/* Share buttons */
-.sharebuttons {
-  padding-bottom: 0;
-  padding-top: 0;
+    a {
+      color: var(--global-text-color-light);
+      text-decoration: none;
 
-  a {
-    i::before {
-      color: var(--global-text-color);
-      -webkit-transition: all 0.2s ease-in-out;
-    }
-
-    &:hover {
-      i::before {
+      &:hover {
         color: var(--global-theme-color);
       }
     }
   }
+
+  .post-content {
+    blockquote {
+      border-left: 5px solid var(--global-theme-color);
+      padding: 8px;
+    }
+  }
 }
 
-.sharebuttons i {
-  font-size: 1.7rem;
+progress {
+  /* Positioning */
+  position: fixed;
+  left: 0;
+  top: 56px;
+  z-index: 10;
+
+  /* Dimensions */
+  width: 100%;
+  height: 1px;
+
+  /* Reset the appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  /* Get rid of the default border in Firefox/Opera. */
+  border: none;
+
+  /* Progress bar container for Firefox/IE10  */
+  background-color: transparent;
+
+  /* Progress bar value for IE10  */
+  color: var(--global-theme-color);
 }
 
-.sharebuttons ul {
-  margin: 20px 0 0 0;
-  text-align: center;
+progress::-webkit-progress-bar {
+  background-color: transparent;
 }
 
-.sharebuttons ul li {
-  display: inline;
+progress::-webkit-progress-value {
+  background-color: var(--global-theme-color);
 }
 
-.sharebuttons ul li a {
-  text-decoration: none;
+progress::-moz-progress-bar {
+  background-color: var(--global-theme-color);
+}
+
+.progress-container {
+  width: 100%;
+  background-color: transparent;
+  position: fixed;
+  top: 56px;
+  left: 0;
+  height: 5px;
+  display: block;
+}
+
+.progress-bar {
+  background-color: var(--global-theme-color);
+  width: 0%;
+  display: block;
+  height: inherit;
 }
