--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -46,6 +46,8 @@ html[data-theme='dark'] {
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
   --global-distill-app-color: #{$grey-color-light};
+  --global-divider-color: #424246;
+  --global-card-bg-color: #{$grey-900};
 
   .fa-sun {
     padding-left: 10px;
