--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,8 @@ $yellow-color: #efcc00 !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark: darken($grey-color, 25%);
+$grey-color-dark: #1C1C1D;
+$grey-900: #212529;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
