--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,9 +5,9 @@
 
 @use "sass:color";
 
-$powder-blue: #A7BED3 !default;
-$indian-red: #D56062 !default;
-$black-bean: #320F0C !default;
+$powder-blue: #a7bed3 !default;
+$indian-red: #d56062 !default;
+$black-bean: #320f0c !default;
 
 // Colors
 $red-color: #ff3636 !default;
