--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -6,10 +6,18 @@
       <a href="{{ social[1] }}" title="Blogger"><i class="fa-brands fa-blogger-b"></i></a>
     {% when 'bluesky_url' %}
       <a href="{{ social[1] }}" title="Bluesky" target="_blank" rel="noopener">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" 
-      width="24" height="24" viewBox="0 0 24 24" 
-      stroke-width="2" stroke="currentColor" fill="none" 
-      stroke-linecap="round" stroke-linejoin="round">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
           <path d="M6.335 5.144c-1.654 -1.199 -4.335 -2.127 -4.335 .826
                   c0 .59 .35 4.953 .556 5.661c.713 2.463 3.13 2.75 5.444 2.369
                   c-4.045 .665 -4.889 3.208 -2.667 5.41c1.03 1.018 1.913 1.59 2.667 1.59
@@ -27,12 +35,18 @@
       <a href="https://discord.com/users/{{ social[1] }}" title="Discord"><i class="fa-brands fa-discord"></i></a>
     {% when 'email' %}
       <a href="mailto:{{ social[1] | encode_email }}" title="email">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 
-               0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-      <polyline points="22,6 12,13 2,6"></polyline>
-      </svg>
+        <svg
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1
+                   0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+          <polyline points="22,6 12,13 2,6"></polyline>
+        </svg>
       </a>
     {% when 'facebook_id' %}
       <a href="https://facebook.com/{{ social[1] }}" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
@@ -40,20 +54,26 @@
       <a href="https://www.flickr.com/{{ social[1] }}" title="Flickr"><i class="fa-brands fa-flickr"></i></a>
     {% when 'github_username' %}
       <a href="https://github.com/{{ social[1] }}" title="GitHub">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M9 19c-5 1.5-5-2.5-7-3 
-               m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61 
-               c3.14-.35 6.44-1.54 6.44-7 
-               A5.44 5.44 0 0 0 20 4.77 
-               5.07 5.07 0 0 0 19.91 1 
-               S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0 
-               C6.27.65 5.09 1 5.09 1 
-               A5.07 5.07 0 0 0 5 4.77 
-               a5.44 5.44 0 0 0-1.5 3.78 
-               c0 5.42 3.3 6.61 6.44 7 
-               A3.37 3.37 0 0 0 9 18.13V22"></path>
-      </svg>
+        <svg
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M9 19c-5 1.5-5-2.5-7-3
+                   m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61
+                   c3.14-.35 6.44-1.54 6.44-7
+                   A5.44 5.44 0 0 0 20 4.77
+                   5.07 5.07 0 0 0 19.91 1
+                   S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0
+                   C6.27.65 5.09 1 5.09 1
+                   A5.07 5.07 0 0 0 5 4.77
+                   a5.44 5.44 0 0 0-1.5 3.78
+                   c0 5.42 3.3 6.61 6.44 7
+                   A3.37 3.37 0 0 0 9 18.13V22"></path>
+        </svg>
       </a>
     {% when 'gitlab_username' %}
       <a href="https://gitlab.com/{{ social[1] }}" title="GitLab"><i class="fa-brands fa-gitlab"></i></a>
@@ -75,13 +95,19 @@
       <a href="https://leetcode.com/u/{{ social[1] }}/" target="_blank" title="LeetCode"><i class="si si-leetcode"></i></a>
     {% when 'linkedin_username' %}
       <a href="https://www.linkedin.com/in/{{ social[1] }}" title="LinkedIn">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 
-               2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-      <rect x="2" y="9" width="4" height="12"></rect>
-      <circle cx="4" cy="4" r="2"></circle>
-      </svg>
+        <svg
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2
+                   2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+          <rect x="2" y="9" width="4" height="12"></rect>
+          <circle cx="4" cy="4" r="2"></circle>
+        </svg>
       </a>
     {% when 'mastodon_username' %}
       <a rel="me" href="https://{{ social[1] }}" title="Mastodon"><i class="fa-brands fa-mastodon"></i></a>
@@ -103,11 +129,19 @@
       <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
     {% when 'scholar_userid' %}
       <a href="https://scholar.google.com/citations?user={{ social[1] }}" title="Google Scholar">
-      <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 28 28"
-        stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        aria-hidden="true" fill="none" stroke="currentColor">
-        <path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"></path>
-      </svg>
+        <svg
+          class="icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="-2 -2 28 28"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          aria-hidden="true"
+          fill="none"
+          stroke="currentColor"
+        >
+          <path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"></path>
+        </svg>
       </a>
     {% when 'scopus_id' %}
       <a href="https://www.scopus.com/authid/detail.uri?authorId={{ social[1] }}" title="Scopus"><i class="ai ai-scopus"></i></a>
@@ -139,15 +173,21 @@
       <a href="{{ social[1] }}" title="Work"><i class="fa-solid fa-briefcase"></i></a>
     {% when 'x_username' %}
       <a href="https://twitter.com/{{ social[1] }}" title="X">
-      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 
-              4.48 4.48 0 0 0-7.86 3v1 
-              A10.66 10.66 0 0 1 3 4s-4 9 5 13 
-              a11.64 11.64 0 0 1-7 2 
-              c9 5 20 0 20-11.5 
-              a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
-      </svg>
+        <svg
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53
+                  4.48 4.48 0 0 0-7.86 3v1
+                  A10.66 10.66 0 0 1 3 4s-4 9 5 13
+                  a11.64 11.64 0 0 1-7 2
+                  c9 5 20 0 20-11.5
+                  a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
+        </svg>
       </a>
     {% when 'youtube_id' %}
       <a href="https://youtube.com/@{{ social[1] }}" title="YouTube"><i class="fa-brands fa-youtube"></i></a>
