--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -15,7 +15,7 @@
     {% include head.liquid %}
 
     {%- comment -%} Cookie consent {%- endcomment -%}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css">
   </head>
 
   <!-- Body -->
